--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -116,6 +116,9 @@ a:active {text-decoration:underline;}
       <a class="delete item">
         <i class="trash icon"></i> 
       </a>
+      <a class="details item">
+        <i class="list layout icon"></i> 
+      </a>
       <a class="graph item">
         <i class="unhide icon"></i> 
       </a>
