use the same icon for annotation detail view

--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -117,7 +117,7 @@ a:active {text-decoration:underline;}
         <i class="trash icon"></i> 
       </a>
       <a class="details item">
-        <i class="list layout icon"></i> 
+        <i class="edit icon"></i> 
       </a>
       <a class="graph item">
         <i class="unhide icon"></i> 
