--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -2,12 +2,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<link rel="stylesheet" type="text/css" href="/lib/semantic-ui/build/packaged/css/semantic.css">
-<link rel="stylesheet" href="/lib/jquery-ui/themes/ui-lightness/jquery-ui.css" />
-<link rel="stylesheet" href="/lib/jstree/dist/themes/default/style.min.css" />
-<link rel="stylesheet" href="dashboard.css" />
-<link rel="stylesheet" href="/__wm/lib/d3plus/d3plus.css" />
-<link rel="stylesheet" href="/__wm/lib/nvd3/nv.d3.css" />
+<link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->lib/semantic-ui/build/packaged/css/semantic.css">
+<link rel="stylesheet" href="<!-- @var HOMEPAGE -->lib/jquery-ui/themes/ui-lightness/jquery-ui.css" />
+<link rel="stylesheet" href="<!-- @var HOMEPAGE -->lib/jstree/dist/themes/default/style.min.css" />
+<link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/dashboard.css" />
+<link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3plus.css" />
+<link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/lib/nvd3/nv.d3.css" />
 <style type="text/css">
 /* file upload */
 #holder.hover { border: 4px dashed #0c0; }
@@ -29,11 +29,11 @@ a:active {text-decoration:underline;}
 </style>
 </head>
 <body>
-<div class="ui details overlay right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(/__wm/mesh.png)">
+<div class="ui details overlay right sidebar" style="-moz-box-shadow: 3px 3px 5px 6px #ccc; -webkit-box-shadow: 3px 3px 5px 6px #ccc; box-shadow: 3px 3px 5px 6px #ccc;background-image: url(<!-- @var HOMEPAGE -->__wm/mesh.png)">
   <div class="three fluid ui buttons">
     <button title="Annotations" class="ui mini annotations attached button">
       <i class="large edit icon"></i>
-      <span id="annotationCount"><img src="/__wm/loading.gif" alt="loading results" /><span>
+      <span id="annotationCount"><img src="<!-- @var HOMEPAGE -->__wm/loading.gif" alt="loading results" /><span>
     </button>
     <div title="More options" class="ui mini context attached dropdown button">
       <i class="large reorder icon"></i>
@@ -53,7 +53,7 @@ a:active {text-decoration:underline;}
   <div class="main fluid ui buttons">
    <button style="height: 49" title="Search settings" class="ui mini search toggle attached button">
       <i class="large search icon"></i>
-      <span id="searchCount"><img src="/__wm/loading.gif" alt="loading results" /><span>
+      <span id="searchCount"><img src="<!-- @var HOMEPAGE -->__wm/loading.gif" alt="loading results" /><span>
     </button>
 
    <button title="Scraper settings" class="ui scrape toggle attached button">
@@ -146,21 +146,20 @@ a:active {text-decoration:underline;}
 </div>
 
 </body>
-<script src="/lib/jquery/dist/jquery.js"></script>
-<script src="lib/jquery.address.js"></script>
-<script src="lib/tablesort.js"></script>
-<script src="/lib/jquery-ui/ui/jquery-ui.js"></script>
-<script src="/lib/faye/include.js"></script>
-<script src="/lib/jstree/dist/jstree.min.js"></script>
-<script src="/lib/semantic-ui/build/packaged/javascript/semantic.js"></script>
-<script src="<!-- @var HOMEPAGE -->/member.js" defer="defer"></script>
-<script src="dashboard.js" defer="defer"></script>
-<script src="dragFile.js"></script>
-<script src="https://togetherjs.com/togetherjs-min.js"></script>
+<script src="<!-- @var HOMEPAGE -->lib/jquery/dist/jquery.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/lib/jquery.address.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/lib/tablesort.js"></script>
+<script src="<!-- @var HOMEPAGE -->lib/jquery-ui/ui/jquery-ui.js"></script>
+<script src="<!-- @var HOMEPAGE -->lib/faye/include.js"></script>
+<script src="<!-- @var HOMEPAGE -->lib/jstree/dist/jstree.min.js"></script>
+<script src="<!-- @var HOMEPAGE -->lib/semantic-ui/build/packaged/javascript/semantic.js"></script>
+<script src="<!-- @var HOMEPAGE -->member.js" defer="defer"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/dashboard.js" defer="defer"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/dragFile.js"></script>
 
-<script src="/__wm/lib/d3plus/d3.js"></script>
-<script src="/__wm/lib/d3plus/d3plus.min.js"></script>
-<script src="/__wm/lib/nvd3/nv.d3.js"></script>
-<script src="/__wm/viz.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3plus.min.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/lib/nvd3/nv.d3.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/viz.js"></script>
 
 </html>
