--- a/contrib/__wm/settings.html
+++ b/contrib/__wm/settings.html
@@ -1,7 +1,7 @@
     <div class="innerMoreNext">
       <h3 class="morenext">Profile »</h3>
       <div class="hidden innerMoreNext">
-        Image: <img alt="profile image" src="/__wm/icons/manager.png" /><br />
+        Image: <img alt="profile image" src="<!-- @var HOMEPAGE -->__wm/icons/manager.png" /><br />
         Email: <input id="changeEmail" /> <button>Change</button>
       </div>
       <h3 class="morenext">Annotations »</h3>
