--- a/contrib/__wm/injected-iframe.html
+++ b/contrib/__wm/injected-iframe.html
@@ -15,9 +15,9 @@
   <div id="treeContainer" style="position: fixed; top: 2em; overflow: auto; width: 100%; height: 90%"></div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="<!-- @var HOMEPAGE -->/lib/faye/include.js"></script>
-  <script src="<!-- @var HOMEPAGE -->/lib/jstree/dist/jstree.min.js"></script>
-  <script src="<!-- @var HOMEPAGE -->/member.js" defer="defer"></script>
+  <script src="<!-- @var HOMEPAGE -->lib/faye/include.js"></script>
+  <script src="<!-- @var HOMEPAGE -->lib/jstree/dist/jstree.min.js"></script>
+  <script src="<!-- @var HOMEPAGE -->member.js" defer="defer"></script>
   <script src="/__wm/injected-iframe.js" defer="defer"></script>
 
 </body>
