--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -3,6 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->lib/semantic-ui/build/packaged/css/semantic.css">
+<link rel="stylesheet" type="text/css" href="<!-- @var HOMEPAGE -->lib/select2/select2.css">
 <link rel="stylesheet" href="<!-- @var HOMEPAGE -->lib/jquery-ui/themes/ui-lightness/jquery-ui.css" />
 <link rel="stylesheet" href="<!-- @var HOMEPAGE -->lib/jstree/dist/themes/default/style.min.css" />
 <link rel="stylesheet" href="<!-- @var HOMEPAGE -->__wm/dashboard.css" />
@@ -153,13 +154,15 @@ a:active {text-decoration:underline;}
 <script src="<!-- @var HOMEPAGE -->lib/faye/include.js"></script>
 <script src="<!-- @var HOMEPAGE -->lib/jstree/dist/jstree.min.js"></script>
 <script src="<!-- @var HOMEPAGE -->lib/semantic-ui/build/packaged/javascript/semantic.js"></script>
-<script src="<!-- @var HOMEPAGE -->member.js" defer="defer"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/dashboard.js" defer="defer"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/dragFile.js"></script>
+<script src="<!-- @var HOMEPAGE -->lib/select2/select2.js"></script>
 
 <script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3plus.min.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/lib/nvd3/nv.d3.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/viz.js"></script>
+
+<script src="<!-- @var HOMEPAGE -->member.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/dashboard.js" defer="defer"></script>
 
 </html>
