switching to member scrape

--- a/contrib/__wm/scrape.html
+++ b/contrib/__wm/scrape.html
@@ -25,6 +25,7 @@
   <div class="column">
     <div class="ui fluid form segment">
       <h3 class="heading">Members</h3>
+      <select multiple class="team container" style="width: 100%"></select>
     </div>
   </div>
   <div class="column">
@@ -36,8 +37,8 @@
       </div>
       <div class="field">
         <label for="scanEvery">Scan every</label>
-        <input id="scanEvery" class="spinner" value="once only" size="8" title="when to recheck starting points"> 
-        <select style="width: 8em"><option>hours</option><option>days</option></select>
+        <input id="scanEvery" disabled class="xspinner" value="once only" size="8" title="when to recheck starting points"> 
+        <select disabled style="width: 8em"><option>hours</option><option>days</option></select>
       </div>
       <h4>Existing scrapes</h4>
       <div id="existingScrapes">
