server side retrieval, search updating

--- a/contrib/__wm/member.html
+++ b/contrib/__wm/member.html
@@ -67,8 +67,8 @@
         <div class="anedit" id="editSearcher">
           <h2>Searcher</h2>
           <div class="field">
-            <label title="Locations to search" for="locations">Locations</label>
-            <textarea id="locations"></textarea>
+            <label title="Search template" for="template">Template</label>
+            <textarea id="template"></textarea>
           </div>
         </div>
         <div class="anedit" id="editScraper">
