--- a/contrib/__wm/query.html
+++ b/contrib/__wm/query.html
@@ -30,7 +30,7 @@
           <option value="notann">Not annotated</option>
           <option value="valOrUnval">Visited, no annotations</option>
           <option value="queued">Not visited (queued)</option>
-        </select><</div>
+        </select></div>
         <div><span class="ui checkbox"><input id="refreshQueries" type="checkbox" /> <label for="refreshQueries" id="refreshLabel" title="Refreshes the query results periodically">Refresh</label></span></div>
       </div>
     </div>
