--- a/contrib/__wm/index.html
+++ b/contrib/__wm/index.html
@@ -47,8 +47,8 @@ a:active {text-decoration:underline;}
   </div>
   include "iframe-contents.html"
 </div>
-<div class="ui left viz sidebar">
-  <div id="viz"></div>
+<div class="ui left treemap sidebar">
+  <div id="treemap"></div>
 </div>
 <div class="ui content">
   <div class="main fluid ui buttons">
@@ -160,7 +160,7 @@ a:active {text-decoration:underline;}
 <script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/lib/d3plus/d3plus.min.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/lib/nvd3/nv.d3.js"></script>
-<script src="<!-- @var HOMEPAGE -->__wm/viz.js"></script>
+<script src="<!-- @var HOMEPAGE -->__wm/cluster-treemap.js"></script>
 
 <script src="<!-- @var HOMEPAGE -->member.js"></script>
 <script src="<!-- @var HOMEPAGE -->__wm/dashboard.js" defer="defer"></script>
